# CleanWhispr-Desktop

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SPEC.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_linux.sh  start_macos.command  start_windows.bat
cleanwispr/: __init__.py  __main__.py  app.py  autostart.py  logging_setup.py
cleanwispr/audio/: capture.py  gate.py
cleanwispr/core/: controller.py
cleanwispr/hotkeys/: base.py  (+3 more)
packaging/: entry.py  installer.iss
scripts/: build_linux.py  build_linux.sh  build_macos.command  build_macos.py  build_windows.bat  build_windows.py  make_icon.py
skillkit/: README.md  __init__.py  compose.py  library.py  models.py  store.py  voice.py
tests/: test_combos.py  test_controller.py  test_controller_live.py  test_controller_notes.py  test_db.py  test_editor_flow.py  test_gate.py  test_hardware.py  test_history_tab.py  test_hold_mode.py  test_hotkey_state.py  test_inject.py  test_live.py  test_model_manager_ui.py  test_notes_editor.py  test_notes_slider.py  test_notes_table.py  test_notes_vault.py  test_notes_vision.py  test_notes_window_ai.py  test_ollama.py  test_ollama_tools.py  test_platforms.py  test_polish.py  test_prompts.py  test_prompts_skill.py  test_settings.py  test_setup_wizard.py  test_skillkit_compose.py  test_skillkit_library.py  test_skillkit_voice.py  test_skills_controller.py  test_sounds.py  test_stt.py  test_tasks.py  test_thinking_panel.py  test_toolkit.py  test_toolloop.py  test_windows_clipboard.py
toolkit/: __init__.py  authoring.py  library.py  models.py  runner.py
(+58 files in other folders)
